Full page dynamicly updating

--- a/templates/partials/main.hbs
+++ b/templates/partials/main.hbs
@@ -2,7 +2,7 @@
     <section id="date-picker">
         <div class="">
             <div class="date-box">
-                <div id="date" class="date">{{displayDate}}</div>
+                <div id="date" class="date"><span id="displayDate-update">{{displayDate}}</span></div>
                 <form id="date-form" class="date-form">
                     <label for="month">Report Date: </label>
                     <select id="month-selection" name="month">
@@ -38,7 +38,7 @@
                 <div class="stat-text">
                     Total Visits
                 </div>
-                <div class="stat-value">({{data.totalVisits}})</div>
+                <div class="stat-value">(<span id="totalVisits-update" class="update">{{data.totalVisits}}</span>)</div>
 
             </div>
             <div class="stat stat-2">
@@ -47,7 +47,8 @@
                 <div class="stat-text">
                     Unique Visits
                 </div>
-                <div class="stat-value">({{data.uniqueVisits}})</div>
+                <div class="stat-value">(<span id="uniqueVisits-update" class="update">{{data.uniqueVisits}}</span>)
+                </div>
 
             </div>
             <div class="stat stat-3">
@@ -56,8 +57,9 @@
                 <div class="stat-text">
                     Avg. Visit Length
                 </div>
-                <div class="stat-value">({{data.averageVisitLength}} s)</div>
 
+                <div class="stat-value">(<span id="averageVisitLength-update"
+                        class="update">{{data.averageVisitLength}}</span> s)</div>
             </div>
         </div>
         <div id="monthlyChartContainer" class="chart chart2">
@@ -73,8 +75,8 @@
             <i class="fas fa-user fa-lg"></i>
             <i class="far fa-user fa-lg"></i>
 
-            <div class="icon-text">{{data.subscribers}}</div>
-            <div class="icon-text">{{data.nonSubscribers}}</div>
+            <div class="icon-text"><span id="subscribers-update" class="update">{{data.subscribers}}</span></div>
+            <div class="icon-text"><span id="nonSubscribers-update" class="update">{{data.nonSubscribers}}</span></div>
 
             <div class="icon-subtext">Subscriber</div>
             <div class="icon-subtext">Non-Subscriber</div>
@@ -83,8 +85,8 @@
             <i class="fas fa-mobile-alt fa-lg"></i>
             <i class="fas fa-desktop fa-lg"></i>
 
-            <div class="icon-text">{{data.mobile}}%</div>
-            <div class="icon-text">{{data.desktop}}%</div>
+            <div class="icon-text"><span id="mobile-update" class="update">{{data.mobile}}</span>%</div>
+            <div class="icon-text"><span id="desktop-update" class="update">{{data.desktop}}</span>%</div>
 
             <div class="icon-subtext">Mobile</div>
             <div class="icon-subtext">Desktop</div>
@@ -95,10 +97,10 @@
             <i class="fas fa-ad fa-lg"></i>
             <i class="fab fa-twitter-square fa-lg"></i>
 
-            <div class="icon-text">{{data.url}}%</div>
-            <div class="icon-text">{{data.link}}%</div>
-            <div class="icon-text">{{data.advert}}%</div>
-            <div class="icon-text">{{data.social}}%</div>
+            <div class="icon-text"><span id="url-update" class="update">{{data.url}}</span>%</div>
+            <div class="icon-text"><span id="link-update" class="update">{{data.link}}</span>%</div>
+            <div class="icon-text"><span id="advert-update" class="update">{{data.advert}}</span>%</div>
+            <div class="icon-text"><span id="social-update" class="update">{{data.social}}</span>%</div>
 
             <div class="icon-subtext">URL</div>
             <div class="icon-subtext">Email Link</div>
@@ -111,7 +113,9 @@
             <div class="list-title">Visits To Most Popular Pages</div>
             <ul class="list">
                 {{#each data.top5Pages}}
-                <li><span class="rank">{{inc @index}} </span> {{this.[0]}}<span class="rank-value">({{this.[1]}})</span>
+                <li><span class="rank">{{inc @index}} </span>
+                    <span id="top5Pages-{{inc @index}}-page" class="popular-page">{{this.[0]}}</span>
+                    <span id="top5Pages-{{inc @index}}-value" class="popular-value rank-value">({{this.[1]}})</span>
                 </li>
                 {{/each}}
             </ul>
@@ -120,8 +124,11 @@
             <div class="list-title">Visits by Company</div>
             <ul class="list">
                 {{#each data.top5Companies}}
-                <li><span class="rank">{{inc @index}} </span> <img src="../../public/img/{{this.[0]}}.png"
-                        alt="">{{this.[0]}}<span class="rank-value">({{this.[1]}})</span></li>
+                <li><span class="rank">{{inc @index}} </span>
+                    <img src="../../public/img/{{this.[0]}}.png" alt=""><span id="top5Companies-{{inc @index}}-page"
+                        class="company-page">{{this.[0]}}</span>
+                    <span id=" top5Companies-{{inc @index}}-value"
+                        class="company-value rank-value">({{this.[1]}})</span>
                 </li>
                 {{/each}}
 
@@ -130,29 +137,31 @@
     </section>
 </div>
 <script>
-    const monthlylabels = decodeURI("{{ chartData.monthlyLabels }}").split(",")
-    const weeklyLabels = decodeURI("{{chartData.weeklyLabels}}").split(",")
-    updateWeeklyChart(weeklyLabels, [{{ chartData.weeklyData }}]);
-    updateMonthlyChart(monthlylabels, [{{ chartData.monthlyData }}]);
+    let weeklyData = [{{ chartData.weeklyData }}];
+    let monthlyData = [{{ chartData.monthlyData }}];
+    let monthlylabels = decodeURI("{{ chartData.monthlyLabels }}").split(",")
+    let weeklyLabels = decodeURI("{{chartData.weeklyLabels}}").split(",")
+    updateWeeklyChart(weeklyLabels, weeklyData);
+    updateMonthlyChart(monthlylabels, monthlyData);
     let chartSize;
 
-    const removeAndUpdateChart = () => {
+    const removeAndUpdateCharts = () => {
         removeOldChartContext("weeklyChartContainer", "weeklyChart");
-        updateWeeklyChart(weeklyLabels, [{{ chartData.weeklyData }}]);
-    removeOldChartContext("monthlyChartContainer", "monthlyChart");
-    updateMonthlyChart(monthlylabels, [{{ chartData.monthlyData }}]);
+        updateWeeklyChart(weeklyLabels, weeklyData);
+        removeOldChartContext("monthlyChartContainer", "monthlyChart");
+        updateMonthlyChart(monthlylabels, monthlyData);
     }
 
     const updateChart = () => {
         const screenWidth = window.innerWidth;
         if (screenWidth < 750 && chartSize != "small") {
-            removeAndUpdateChart();
+            removeAndUpdateCharts();
             chartSize = "small";
         } else if (screenWidth < 1050 && screenWidth > 750 && chartSize != "medium") {
-            removeAndUpdateChart();
+            removeAndUpdateCharts();
             chartSize = "medium";
         } else if (screenWidth >= 1050 && chartSize != "large") {
-            removeAndUpdateChart();
+            removeAndUpdateCharts();
             chartSize = "large";
         }
     }
