--- a/templates/partials/downloadGauge.hbs
+++ b/templates/partials/downloadGauge.hbs
@@ -294,9 +294,7 @@
             class="downloadText st13 st14 {{downloadColor}}">{{downloads.tripleDigit}}</text>
         <rect x="44.36" y="76.18" class="st12" width="67.92" height="37.4" />
         <text id="doubleDigit" transform="matrix(1 0 0 1 54.5796 102.2295)"
-            class="downloadText st13 st14 {{downloadColor}}">
-            {{downloads.doubleDigit}}
-        </text>
+            class="downloadText st13 st14 {{downloadColor}}">{{downloads.doubleDigit}}</text>
         <rect x="44.36" y="76.66" class="st12" width="67.92" height="37.4" />
         <text id="singleDigit" transform="matrix(1 0 0 1 64.3716 102.2063)"
             class="downloadText st13 st14 {{downloadColor}}">{{downloads.singleDigit}}</text>
