--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -403,27 +403,21 @@ footer .about {
     opacity: 0;
 }
 
-.shaker{
-    transition: all 1.5s;
-    transition-delay: 1s;
-    /* Start the shake animation and make the animation last for 0.5 seconds */
-    animation: shake 0.5s;
-  
-    /* When the animation is finished, start again */
-    animation-iteration-count:3;
+.shaker:nth-of-type(2n){
+    animation: shake 0.4s;
+    animation-iteration-count:1;
   }
+
+  .shaker:nth-of-type(2n+1){
+ animation: shake 0.6s;
+ animation-iteration-count:1;
+  }
+
 @keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -2px) rotate(-0.5deg); }
-    20% { transform: translate(-1px, 0px) rotate(0.5deg); }
-    30% { transform: translate(1px, 1px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(0.5deg); }
-    50% { transform: translate(-1px, 1px) rotate(-0.5deg); }
-    60% { transform: translate(-1px, 1px) rotate(0deg); }
-    70% { transform: translate(1px, 1px) rotate(-0.5deg); }
-    80% { transform: translate(-1px, -1px) rotate(0.5deg); }
-    90% { transform: translate(1px, 1px) rotate(0deg); }
-    100% { transform: translate(1px, -1px) rotate(-0.5deg); }
+    0% { transform: translate(0px, 2px); }
+    50% { transform: translate(-0px, -3px); }
+    75% { transform: translate(-0px, 2px); }
+    100% { transform: translate(0px, 0px); }
   }
 /* 
  */
