Added shake animation to Display Date

--- a/templates/partials/main.hbs
+++ b/templates/partials/main.hbs
@@ -2,7 +2,7 @@
     <section id="date-picker">
         <div class="">
             <div class="date-box">
-                <div id="date" class="date"><span id="displayDate-update">{{displayDate}}</span></div>
+                <div id="date" class="date shakeSide"><span id="displayDate-update">{{displayDate}}</span></div>
                 <form id="date-form" class="date-form">
                     <label for="month">Report Date: </label>
                     <select id="month-selection" name="month">
