--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -323,7 +323,7 @@ footer ul {
     list-style-type: none;
     padding: 0;
     display: grid;
-    text-align: start;
+    text-align: left;
     justify-content: start;
     line-height: 1.8;
 }
