--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,436 +1,441 @@
 html {
-    box-sizing: border-box;
-
+  box-sizing: border-box;
 }
 
 *,
 *:before,
 *:after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body {
-    color: rgb(108, 111, 115);
-    font-family: "Roboto", Arial, Helvetica, sans-serif;
-    text-align: center;
-    margin: 0;
+  color: rgb(108, 111, 115);
+  font-family: 'Roboto', Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin: 0;
 }
 
 #content {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-auto-rows: minmax(50px, auto);
-    max-width: 1100px;
-    margin: 0 auto;
-    gap: 10px;
-    /* padding: 10px; */
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-auto-rows: minmax(50px, auto);
+  max-width: 1100px;
+  margin: 0 auto;
+  gap: 10px;
+  /* padding: 10px; */
 }
 
 nav {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding: 5px 10px;
-    border-bottom: 1px solid #d1d1d1;
-    /* grid-template-columns: repeat(12, 1fr); */
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 5px 10px;
+  border-bottom: 1px solid #d1d1d1;
+  /* grid-template-columns: repeat(12, 1fr); */
 }
 
 nav img {
-    width: 150px;
+  width: 150px;
 }
 
 .nav-item {
-    padding: 0 10px;
-    font-size: 1.2rem;
-    color: rgba(74, 114, 167, 1);
-    font-weight: 500;
-    cursor: pointer;
+  padding: 0 10px;
+  font-size: 1.2rem;
+  color: rgba(74, 114, 167, 1);
+  font-weight: 500;
+  cursor: pointer;
 }
 
 .nav1 {
-    margin-right: auto;
+  margin-right: auto;
 }
 
-
 #date-picker {
-    grid-column: 1/13;
-    grid-row: 1;
-    display: grid;
+  grid-column: 1/13;
+  grid-row: 1;
+  display: grid;
 }
 
 .date {
-    font-size: 2rem;
-    font-weight: 300;
-    color: rgba(173, 22, 132, 1);
+  font-size: 2rem;
+  font-weight: 300;
+  color: rgba(173, 22, 132, 1);
 }
 
 form label {
-    font-size: 0.8rem;
-    font-weight: 300;
-    color: rgb(108, 111, 115)
+  font-size: 0.8rem;
+  font-weight: 300;
+  color: rgb(108, 111, 115);
 }
 
 .date-box {
-    margin-top: 10px;
-    background: #f3f3f3;
-    border-radius: 0.5rem;
-    align-self: center;
-    padding: 10px;
-    border-bottom: 1px solid #f3f3f3;
-    display: flex;
+  margin-top: 10px;
+  background: #f3f3f3;
+  border-radius: 0.5rem;
+  align-self: center;
+  padding: 10px;
+  border-bottom: 1px solid #f3f3f3;
+  display: flex;
 }
 
 .date-form {
-    margin-left: auto;
-    align-self: center;
+  margin-left: auto;
+  align-self: center;
 }
 
 .date-box select {
-    border: none;
-    border-bottom: 2px solid #f3f3f3;
-    font-family: roboto;
+  border: none;
+  border-bottom: 2px solid #f3f3f3;
+  font-family: roboto;
 }
 
 .submit {
-    color: #fff;
-    border-radius: 6px;
-    border: 2px solid rgba(110, 31, 119, 0.8);
-    margin-left: 2px;
-
+  color: #fff;
+  border-radius: 6px;
+  border: 2px solid rgba(110, 31, 119, 0.8);
+  margin-left: 2px;
 }
 
 button:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 button:active {
-    transform: scale(0.95);
+  transform: scale(0.95);
 }
 
 #stats {
-    display: grid;
-    align-self: center;
-    justify-self: center;
-
+  display: grid;
+  align-self: center;
+  justify-self: center;
 }
 
 .stat {
-    padding: 10px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    justify-content: center;
-    align-items: center;
-    font-size: 0.9rem;
-    font-weight: 500;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  align-items: center;
+  font-size: 0.9rem;
+  font-weight: 500;
 }
 
 .stat svg {
-    justify-self: center;
-    padding-right: 10px;
-    align-self: center;
-    color: rgba(74, 114, 167, 1);
-    font-size: 3rem;
-    width: 1.1em !important;
+  justify-self: center;
+  padding-right: 10px;
+  align-self: center;
+  color: rgba(74, 114, 167, 1);
+  font-size: 3rem;
+  width: 1.1em !important;
 }
 
-
 .stat-text {
-    color: rgb(29, 79, 145);
+  color: rgb(29, 79, 145);
 }
 
 .stat-value {
-    color: rgba(173, 22, 132, 1);
+  color: rgba(173, 22, 132, 1);
 }
 
-
-
 #charts {
-    padding: 20px;
-    grid-column: 1 /13;
-    grid-row: 2 / 4;
-    display: grid;
-    gap: 20px;
-    /* max-width: 1400px; */
+  padding: 20px;
+  grid-column: 1 /13;
+  grid-row: 2 / 4;
+  display: grid;
+  gap: 20px;
+  /* max-width: 1400px; */
 
-    /* border-top: 1px solid #f3f3f3; */
-    align-items: center;
-    justify-content: center;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: minmax(200px, auto);
+  /* border-top: 1px solid #f3f3f3; */
+  align-items: center;
+  justify-content: center;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(200px, auto);
 }
 
 .chart {
-    align-self: stretch;
-    justify-self: stretch;
+  align-self: stretch;
+  justify-self: stretch;
 }
 
 .chart1 {
-    display: grid;
-    min-width: 250px;
-    max-width: 300px;
+  display: grid;
+  min-width: 250px;
+  max-width: 300px;
 }
 
 .hit-count {
-    font-size: 1rem;
-    font-weight: 300;
-    color: rgba(173, 22, 132, 1);
+  font-size: 1rem;
+  font-weight: 300;
+  color: rgba(173, 22, 132, 1);
 }
 
-
-
-
 .blue-gradient {
-    background: linear-gradient(90deg,
-            rgba(74, 114, 167, 1) 0%,
-            rgba(29, 79, 145, 1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(74, 114, 167, 1) 0%,
+    rgba(29, 79, 145, 1) 100%
+  );
 }
 
 .purple-gradient {
-    background: linear-gradient(90deg,
-            rgba(173, 22, 132, 1) 0%,
-            rgba(110, 31, 119, 1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(173, 22, 132, 1) 0%,
+    rgba(110, 31, 119, 1) 100%
+  );
 }
 
 #icons {
-    grid-column: 1 /13;
-    grid-row: 4 / 5;
-    display: grid;
-    grid-template-columns: 1fr 1fr 2fr;
-    grid-auto-rows: minmax(50px, auto);
-    font-size: 1.1rem;
-    border-top: 1px solid #f3f3f3;
-    border-bottom: 1px solid #f3f3f3;
+  grid-column: 1 /13;
+  grid-row: 4 / 5;
+  display: grid;
+  grid-template-columns: 1fr 1fr 2fr;
+  grid-auto-rows: minmax(50px, auto);
+  font-size: 1.1rem;
+  border-top: 1px solid #f3f3f3;
+  border-bottom: 1px solid #f3f3f3;
 }
 
 .icon {
-    border-right: 1px solid #f3f3f3;
-    padding: 1rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-items: center;
-    align-items: center;
-    color: rgba(74, 114, 167, 1);
+  border-right: 1px solid #f3f3f3;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+  color: rgba(74, 114, 167, 1);
 }
 
 .icon-4 {
-    padding: 1rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    justify-items: center;
-    align-items: center;
-    border: none;
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  justify-items: center;
+  align-items: center;
+  border: none;
 }
 
 .icon-text {
-    padding-top: 5px;
-    font-size: 1.0rem;
-    font-weight: 500;
-    color: rgb(29, 79, 145);
+  padding-top: 5px;
+  font-size: 1rem;
+  font-weight: 500;
+  color: rgb(29, 79, 145);
 }
 
 .icon-subtext {
-    font-size: 0.8rem;
-    font-weight: 300;
-    color: #a3a3a3;
+  font-size: 0.8rem;
+  font-weight: 300;
+  color: #a3a3a3;
 }
 
 #cards {
-    grid-column: 2 /12;
-    gap: 40px;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    padding: 20px 0;
+  grid-column: 2 /12;
+  gap: 40px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 20px 0;
 }
 
 .card {
-    border-radius: 0.5rem;
-    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.2);
-    display: grid;
-    min-width: 200px;
-    max-width: 300px;
-    justify-self: center;
-    /* grid-auto-rows: minmax(100px, auto); */
-    /* color: rgba(3, 157, 74, 1); */
+  border-radius: 0.5rem;
+  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.2);
+  display: grid;
+  min-width: 200px;
+  max-width: 300px;
+  justify-self: center;
+  /* grid-auto-rows: minmax(100px, auto); */
+  /* color: rgba(3, 157, 74, 1); */
 }
 
 .card-header {
-    /* align-self: start; */
-    padding: 0.5rem;
-    height: 40px;
-    color: #fff;
-    border-radius: 0.5rem;
+  /* align-self: start; */
+  padding: 0.5rem;
+  height: 40px;
+  color: #fff;
+  border-radius: 0.5rem;
 }
 
 .card img {
-    width: 70%;
-    border-bottom: 1px solid #f3f3f3;
+  width: 70%;
+  border-bottom: 1px solid #f3f3f3;
 }
 
 .card-more {
-    padding: 0.5rem;
-    color: rgb(29, 79, 145);
-    border-radius: 0.5rem;
-    border: 1px solid #e3e3e3;
-    cursor: pointer;
+  padding: 0.5rem;
+  color: rgb(29, 79, 145);
+  border-radius: 0.5rem;
+  border: 1px solid #e3e3e3;
+  cursor: pointer;
 }
 
 .card-body {
-    display: grid;
-    grid-auto-rows: minmax(30px, auto);
+  display: grid;
+  grid-auto-rows: minmax(30px, auto);
 }
 
 .card-body-text {
-    align-self: end;
-    font-size: 0.9rem;
-    font-weight: 500;
-    color: #555;
+  align-self: end;
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: #555;
 }
 
 .card-body-value {
-    align-self: start;
-    font-size: 0.8rem;
-    font-weight: 300;
-    color: #888;
+  align-self: start;
+  font-size: 0.8rem;
+  font-weight: 300;
+  color: #888;
 }
 
 #footer {
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr 1fr;
-    gap: 20px;
-    margin: 20px;
-    align-content: start;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr 1fr;
+  gap: 20px;
+  margin: 20px;
+  align-content: start;
 }
 
 .divider {
-    margin: 25px 0;
-    height: 5px;
-    background: linear-gradient(90deg,
-            rgba(214, 44, 129, 1) 0%,
-            rgba(48, 69, 141, 1) 100%);
+  margin: 25px 0;
+  height: 5px;
+  background: linear-gradient(
+    90deg,
+    rgba(214, 44, 129, 1) 0%,
+    rgba(48, 69, 141, 1) 100%
+  );
 }
 
 .footer-heading {
-    color: #26478e;
-    font-size: 16px;
-    border-bottom: 1px solid #d8d8d8;
-    padding-bottom: 16px;
-    margin-bottom: 16px;
-    font-weight: 500;
-    text-align: left;
+  color: #26478e;
+  font-size: 16px;
+  border-bottom: 1px solid #d8d8d8;
+  padding-bottom: 16px;
+  margin-bottom: 16px;
+  font-weight: 500;
+  text-align: left;
 }
 
 footer ul {
-    list-style-type: none;
-    padding: 0;
-    display: grid;
-    text-align: left;
-    justify-content: start;
-    line-height: 1.8;
+  list-style-type: none;
+  padding: 0;
+  display: grid;
+  text-align: left;
+  justify-content: start;
+  line-height: 1.8;
 }
 
 footer .about {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .footer-subheading {
-    font-weight: 400;
-    color: #575756;
-    align-self: start;
-    cursor: pointer;
-
-
+  font-weight: 400;
+  color: #575756;
+  align-self: start;
+  cursor: pointer;
 }
 
-
 #lists {
-    grid-column: 2 /12;
-    gap: 20px 80px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 20px;
-
+  grid-column: 2 /12;
+  gap: 20px 80px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 20px;
 }
 
 #lists ul {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 #lists img {
-    width: 100px;
-    margin-right: 20px;
+  width: 100px;
+  margin-right: 20px;
 }
 
 .list {
-    display: grid;
-    grid-auto-rows: minmax(60px, auto);
-    align-items: center;
+  display: grid;
+  grid-auto-rows: minmax(60px, auto);
+  align-items: center;
 }
 
 .list-title {
-    color: #26478e;
-    font-weight: 500;
-    padding: 10px;
-    border-bottom: 1px solid #e3e3e3;
+  color: #26478e;
+  font-weight: 500;
+  padding: 10px;
+  border-bottom: 1px solid #e3e3e3;
 }
 
 .list li {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .list .rank-value {
-    font-size: 0.9rem;
-    font-weight: 500;
-    color: rgba(173, 22, 132, 1);
-    justify-self: flex-end;
-    margin-left: auto;
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: rgba(173, 22, 132, 1);
+  justify-self: flex-end;
+  margin-left: auto;
 }
 
 .list .rank {
-    font-size: 0.9rem;
-    font-weight: 500;
-    color: rgb(29, 79, 145);
-    margin: 0 20px;
-
-
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: rgb(29, 79, 145);
+  margin: 0 20px;
 }
 
 .downloadText {
-    transition: all 1.5s;
-    opacity: 0;
+  transition: all 1.5s;
+  opacity: 0;
 }
 
 .shakerSide {
-    animation: shakerSide 0.4s;
-    animation-iteration-count:1;
-     }
+  animation: shakerSide 0.4s;
+  animation-iteration-count: 1;
+}
 
-.shaker:nth-of-type(2n){
-    animation: shake 0.4s;
-    animation-iteration-count:1;
-  }
+.shaker:nth-of-type(2n) {
+  animation: shake 0.4s;
+  animation-iteration-count: 1;
+}
 
-  .shaker:nth-of-type(2n+1){
- animation: shake 0.6s;
- animation-iteration-count:1;
-  }
-
+.shaker:nth-of-type(2n + 1) {
+  animation: shake 0.6s;
+  animation-iteration-count: 1;
+}
 
 @keyframes shake {
-    0% { transform: translate(0px, 1px); }
-    50% { transform: translate(-0px, -2px); }
-    75% { transform: translate(-0px, 1px); }
-    100% { transform: translate(0px, 0px); }
+  0% {
+    transform: translate(0px, 1px);
   }
-  @keyframes shakerSide {
-    0% { transform: translate(1px, 0px); }
-    50% { transform: translate(-2px, 0px); }
-    75% { transform: translate(1px, 0px); }
-    100% { transform: translate(0px, 0px); }
+  50% {
+    transform: translate(-0px, -2px);
   }
+  75% {
+    transform: translate(-0px, 1px);
+  }
+  100% {
+    transform: translate(0px, 0px);
+  }
+}
+@keyframes shakerSide {
+  0% {
+    transform: translate(1px, 0px);
+  }
+  50% {
+    transform: translate(-2px, 0px);
+  }
+  75% {
+    transform: translate(1px, 0px);
+  }
+  100% {
+    transform: translate(0px, 0px);
+  }
+}
 /* 
  */
 /*  */
@@ -449,74 +454,64 @@ footer .about {
 
 /*  */
 @media screen and (max-width: 1050px) {
-    #cards {
-        gap: 30px;
-        grid-template-columns: repeat(3, 1fr);
-    }
+  #cards {
+    gap: 30px;
+    grid-template-columns: repeat(3, 1fr);
+  }
 
-    #footer {
+  #footer {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
-        grid-template-columns: repeat(2, 1fr);
-    }
+  #charts {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
+  .chart1 {
+    min-width: 320px;
+  }
+
+  .chart {
+    justify-self: center;
+  }
+
+  .stat {
+    font-size: 1.1em;
+  }
+
+  @media screen and (max-width: 750px) {
     #charts {
-        grid-template-columns: repeat(2, 1fr);
-
+      grid-template-columns: repeat(1, 1fr);
     }
 
     .chart1 {
-        min-width: 320px;
-    }
-
-    .chart {
-        justify-self: center;
+      min-width: 350px;
     }
 
     .stat {
-        font-size: 1.1em;
-
+      font-size: 1.1em;
     }
 
-    @media screen and (max-width: 750px) {
-        #charts {
-            grid-template-columns: repeat(1, 1fr);
-        }
-
-        .chart1 {
-            min-width: 350px;
-        }
-
-        .stat {
-            font-size: 1.1em;
-
-        }
-
-        #icons {
-            grid-template-columns: 1fr 1fr;
-        }
-
-
-
-        .icon-4 {
-            border-top: 1px solid #f3f3f3;
-            grid-row: 2;
-            grid-column: 1/13;
-        }
-
-        #footer {
-
-            grid-template-columns: repeat(1, 1fr);
-        }
-
-        #lists {
-            grid-template-columns: repeat(1, 1fr);
-        }
-
-        .date {
-            font-size: 1.7rem;
-        }
-
+    #icons {
+      grid-template-columns: 1fr 1fr;
     }
 
+    .icon-4 {
+      border-top: 1px solid #f3f3f3;
+      grid-row: 2;
+      grid-column: 1/13;
+    }
 
+    #footer {
+      grid-template-columns: repeat(1, 1fr);
+    }
 
+    #lists {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    .date {
+      font-size: 1.7rem;
+    }
+  }
+}
