Final presentation improvements

--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,6 +1,5 @@
 <nav>
     <div class="nav-item nav1"><img src="../../public/img/logo.png" alt="" /></div>
 
-    <div class="nav-item nav2">Pages</div>
-    <div class="nav-item nav3">Company</div>
+    <div class="nav-item nav2"><button class="login">Log in</button></div>
 </nav>
